[project]
name = "repo-oracle"
version = "0.1.0"
description = "The Oracle — an agentic self-improvement loop that proposes valid, bold code under src/."
readme = "fak off ya wankaz"
requires-python = ">=3.10"
# stdlib only — the rite needs no offerings.
dependencies = []

[project.scripts]
# the workflow runs `python -m oracle`; this console script works too.
repo-oracle = "oracle.improve:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["oracle/"]

[dependency-groups]
test = ["pytest>=7", "pytest-timeout>=2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --timeout=60"   # nothing should run longer than a minute
markers = ["integration: drives a real local Ollama model"]
